# twitter-trending-topics-pipeline

./: .dockerignore  Dockerfile  Makefile  README.md  architecture.py  cloudformation.yaml  docker-compose.yml  future_scope.md  nlp_pipeline.py  pyproject.toml
app/: config.py  dashboard.py  io_utils.py  main.py  preprocessing.py  processing.py  requirments.txt  test_main.py
data/: test_sample.json
