[project]
name = "twitter-trending-topics-pipeline"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "RET",   # flake8-return
    "PTH",   # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "T201",  # print() usage (acceptable in CLI scripts)
    "RET504",  # unnecessary assignment before return
]

[tool.ruff.lint.per-file-ignores]
"app/test_*.py" = [
    "B011",  # assert False
    "SIM300",  # yoda conditions in asserts are fine
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["app"]
python_files = ["test_*.py"]
